# quranbot-schema-registry

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
quranbot_schema_registry/schemas/mailing/created/: 1.json
tests/: test_validate.py
